# LaTeXBuddy

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  config.py  install.sh  pyproject.toml  requirements-dev.txt  tox.ini
.reuse/: dep5
assets/: logos.afdesign
changelog.d/: +changelog-ci.internal.md  +coverage.internal.md  +extend_path.breaking.md  +gitlab_ci.internal.md  +hash.change.md  +languagetool-requests.change.md  +towncrier.internal.md  105.change.md  108.internal.md  110.change.md  112.breaking.md  121.breaking.md  125.internal.md  126.internal.md  127.internal.md  129.change.md  132.breaking.md  150.internal.md  208.internal.md  _template.md.jinja
docker/: Dockerfile
docs/: COPYING.md  conf.py  index.md  index.rst  requirements.txt
docs/about/: changelog.md  licence.md
docs/appendix/: FDL-1.3.md  brand.md  external.md
docs/developer/: author.md  environment.md  release.md  release.rst
docs/how-to/: module-development.md  use-api.md
docs/reference/: api.rst  cli.md  cli.rst  module-api.rst  server-api.rst
docs/tutorial/: build.md  install.md
latexbuddy/: __init__.py  __main__.py  abs_module.py  abstractmodules.py  algo_intervals.py  algo_intervals_dp.py  application.py  aspell.py  buddy.py  chktex.py  cli.py  colour.py  config.py  config_loader.py  error_class.py  exceptions.py  flask_app.py  languagetool.py  languagetool_local_server.py  latexbuddy.py  log.py  logging_formatter.py  messages.py  module_loader.py  output.py  preprocessor.py  problem.py  texfile.py  tool_loader.py  tools.py  whitelist.py
latexbuddy/config/: models.py
latexbuddy/module_languagetool/: detex_dummy.py  error_dummy.py  languagetool.py  languagetool_local_server.py
latexbuddy/modules/: __init__.py  aspell.py  bib_checkers.py  chktex.py  compiler_warnings.py  diction.py  languagetool.py  logfilter.py  own_checkers.py  proselint.py  proselint_checker.py  proselint_module.py  test_module.py  texfilt.awk  texloganalyser.py  texloganlyser.py  yalafi_checker.py  yalafi_parsing.py
latexbuddy/templates/: flask_index.html  flask_result.html  result.html  style.css
latexbuddy/templates/static/: dropdown.css  file_bar_and_slider.css  flask_collapsible_style.css  flask_index_style.css  main_style.css  modern-normalize.css  navigation_bar.css  navigation_bar_and_pdf_button.css  popup_for_whitelist.css  style.css  whitelist.css  whitelist_button.css
script/: bootstrap  build  console  lint
tests/: conftest.py  equation_test.tex  new_highlighter_test.tex  own_checkers_duplicates_test.tex  preprocessor_test.tex  test.tex
tests/EndlessLoop/: endless_include_second.tex
tests/endlessloop/: endless_include.tex  endless_include2.tex  endless_include_second.tex  endless_include_second2.tex  endless_include_second3.tex
tests/integration/: buddy_test.py  conftest.py  test_cli.py
tests/integration/resources/driver_modules/: driver_0.py  driver_1.py
tests/pytest/integration_tests/: example_integration_test.py
tests/pytest_testcases/: tools.py
tests/pytest_testcases/integration_tests/: test_T1000_buddy_frontend.py  test_T700_buddy_cli.py  test_T800_buddy_module.py  test_T900_buddy_tool_loader.py
tests/pytest_testcases/integration_tests/resources/: T1000_config.py  T1900_config_nopdf.py  T1900_test_document.tex  T1900_test_document_broken.tex  T700_config.py  T800_driver_ModuleProvider.py  T900_test_document.tex
tests/pytest_testcases/integration_tests/resources/T700_driver_modules/: driver_0.py  driver_1.py
tests/pytest_testcases/unit_tests/: example_unit_test.py  test_T1100_cli.py  test_T1200_buddy_whitelist.py  test_T1300_buddy_checks.py  test_T1400_tool_loader.py  test_T1500_aspell.py  test_T1600_chktex.py  test_T1700_diction.py  test_T1800_languagetool.py  test_T1900_logfilter.py  test_T2000_proselint.py  test_T2100_own_checkers.py  test_T2100_yalafi_detex.py  test_T2200_own_checkers.py  test_T2300_bib_checkers.py  test_T2400_frontend.py
tests/pytest_testcases/unit_tests/resources/: T1100_config.py  T1200_config.py  T1200_config_temp_wl.py  T1200_whitelist  T1400_config.py  T1500.txt  T1600.tex  T1700.txt  T1800.tex  T1900.tex  T1900_config.py  T1900_test_document.tex  T2100_test_document.tex  T2200.tex  T2300.bib  T2300.tex  driver_config_loader.py  driver_tex_file.py  dummy_config_loader.py  test_T2400_pdf  test_paper.tex
tests/pytest_testcases/unit_tests/resources/T1300_dummy_modules/: dummy_module.py
tests/pytest_testcases/unit_tests/resources/T1400_dummy_modules/: dummy_module_0.py  dummy_module_1.py  dummy_module_invalid.py
tests/resources/module_loader/: config.py
tests/resources/module_loader/dummy_modules/: dummy_module_0.py  dummy_module_invalid.py
tests/testpaper/: test_paper.tex  test_paper_better.tex  test_paper_deutsch.tex
tests/unit/: module_loader_test.py  output_test.py  test_whitelist.py  whitelist_test.py
tests/unit/modules/: aspell_test.py  bib_checkers_test.py  chktex_test.py  diction_test.py  languagetool_test.py  logfilter_test.py  own_checkers_test.py  proselint_test.py  yalafi_test.py
