[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "latexbuddy"
description = "The only LaTeX checking tool you'll ever need."
readme = "README.md"
requires-python = ">=3.7.15"
license = "GPL-3.0-or-later"
authors = [
    { name = "Niklas Pieninck", email = "n.pieninck@tu-braunschweig.de" },
    { name = "Levi Elsner", email = "levi.elsner@tu-braunschweig.de" },
    { name = "Paul Franke", email = "paul.franke@tu-braunschweig.de" },
    { name = "Jana Haupt", email = "jana.haupt@tu-braunschweig.de" },
    { name = "Hendrik Hentschel", email = "h.hentschel@tu-braunschweig.de" },
    { name = "Nikita Karamov", email = "me@kytta.dev" },
    { name = "Lennart Lutz", email = "l.lutz@tu-braunschweig.de" },
    { name = "David Meyer", email = "da.meyer@tu-braunschweig.de" },
    { name = "Paul Nowitzki", email = "p.nowitzki@tu-braunschweig.de" },
    { name = "Maik Weber", email = "maik.weber@tu-braunschweig.de" }
]
maintainers = [
    { name = "Nikita Karamov", email = "me@kytta.dev" },
    { name = "Niklas Pieninck", email = "n.pieninck@tu-braunschweig.de" },
    { name = "Paul Nowitzki", email = "p.nowitzki@tu-braunschweig.de" },
    { name = "Maik Weber", email = "maik.weber@tu-braunschweig.de" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Typing :: Typed"
]
dependencies = [
    "requests~=2.28",
    "Jinja2~=3.0",
    "yalafi~=1.4",
    "chardet~=5.0",
    "proselint~=0.11.3",
    "Unidecode~=1.2",
    "colorama~=0.4; platform_system == 'Windows'",
    "pydantic~=1.10",
    "bibtexparser~=1.4",
    "Flask~=2.0",
    "PyLaTeX~=1.4",
    "platformdirs~=2.6",
    "importlib_metadata;python_version<'3.8'",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://latexbuddy.gitlab.io/"
Documentation = "https://latexbuddy.readthedocs.io/"
Repository = "https://gitlab.com/LaTeXBuddy/LaTeXBuddy/"
"Bug tracker" = "https://gitlab.com/LaTeXBuddy/LaTeXBuddy/-/issues"

[project.scripts]
latexbuddy = "latexbuddy.cli:main"
latexbuddy-server = "latexbuddy.flask_app:run_server"
latexbuddy-whitelist = "latexbuddy.whitelist:main"

[tool.autopep8]
ignore = ["W503"]

[tool.ruff]
line-length = 79
target-version = "py37"

select = [
    "F",  # pyflakes
    "E", "W",  # pycodestyle
    "C90",  # mccabe
    # TODO: complete docs in a separate issue
#    "D1", "D3",  # pydocstyle
    "N",  # pep8-naming
    "S",  # bandit
    "BLE",  # flake8-blind-except
    "FBT",  # flake8-boolean-trap
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "EM",  # flake8-errmsg
    "ICN",  # flake8-import-conventions
    "T20",  # flake8-print
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ERA",  # eradicate
    "PLC", "PLE", "PLR", "PLW",  # pylint
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.flake8-import-conventions.aliases]
multiprocessing = "mp"

[tool.ruff.flake8-quotes]
inline-quotes = "double"

[tool.hatch]

[tool.hatch.version]
source = "vcs"
