[tool.poetry]
name = "latexbuddy"
version = "0.3.0"
description = ""
license = "Proprietary"
authors = [
    "Niklas Pieninck <n.pieninck@tu-braunschweig.de>",
    "Levi Elsner <levi.elsner@tu-braunschweig.de>",
    "Paul Franke <paul.franke@tu-braunschweig.de>",
    "Jana Haupt <jana.haupt@tu-braunschweig.de>",
    "Hendrik Hentschel <h.hentschel@tu-braunschweig.de>",
    "Nikita Karamov <n.karamov@tu-braunschweig.de>",
    "Lennart Lutz <l.lutz@tu-braunschweig.de>",
    "David Meyer <da.meyer@tu-braunschweig.de>",
    "Paul Nowitzki <p.nowitzki@tu-braunschweig.de>",
    "Maik Weber <maik.weber@tu-braunschweig.de>"
]
readme = "README.md"
include = ["CHANGELOG.md", "NOTICE"]

[tool.poetry.dependencies]
python = "^3.7.15"
requests = "^2.28.1"
Jinja2 = "^3.0.1"
yalafi = "^1.4.0"
chardet = "^5.0.0"
proselint = "~0.11.3"
Unidecode = "^1.2.0"
colorama = "^0.4.6"
double-stream-handler = "^1.0.0"
pydantic = "^1.10.2"
bibtexparser = "^1.4.0"
Flask = "^2.0.1"
PyLaTeX = "^1.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"


[tool.poetry.scripts]
latexbuddy = "latexbuddy.cli:main"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=1",
]

[tool.black]
line-length = 88
exclude = '/(\.git | dist)/'

[tool.isort]
profile = "black"
known_first_party = "latexbuddy"
src_paths = ["latexbuddy", "tests"]
atomic = true
lines_after_imports = 2
lines_between_types = 1
