[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "latexbuddy"
description = "The only LaTeX checking tool you'll ever need."
readme = "README.md"
requires-python = ">=3.7.15"
license ={text = "GPL-3.0-or-later"}
authors = [
    { name = "Niklas Pieninck", email = "n.pieninck@tu-braunschweig.de" },
    { name = "Levi Elsner", email = "levi.elsner@tu-braunschweig.de" },
    { name = "Paul Franke", email = "paul.franke@tu-braunschweig.de" },
    { name = "Jana Haupt", email = "jana.haupt@tu-braunschweig.de" },
    { name = "Hendrik Hentschel", email = "h.hentschel@tu-braunschweig.de" },
    { name = "Nikita Karamov", email = "me@kytta.dev" },
    { name = "Lennart Lutz", email = "l.lutz@tu-braunschweig.de" },
    { name = "David Meyer", email = "da.meyer@tu-braunschweig.de" },
    { name = "Paul Nowitzki", email = "p.nowitzki@tu-braunschweig.de" },
    { name = "Maik Weber", email = "maik.weber@tu-braunschweig.de" }
]
maintainers = [
    { name = "Nikita Karamov", email = "me@kytta.dev" },
    { name = "Niklas Pieninck", email = "n.pieninck@tu-braunschweig.de" },
    { name = "Paul Nowitzki", email = "p.nowitzki@tu-braunschweig.de" },
    { name = "Maik Weber", email = "maik.weber@tu-braunschweig.de" }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Typing :: Typed"
]
dependencies = [
    "requests",
    "Jinja2",
    "yalafi",
    "chardet",
    "proselint~=0.11.3",
    "Unidecode",
    "colorama>=0.4.6; platform_system == 'Windows'",
    "pydantic~=1.10",
    "bibtexparser",
    "Flask",
    "PyLaTeX",
    "platformdirs",
    "importlib_metadata;python_version<'3.8'",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://latexbuddy.gitlab.io/"
Documentation = "https://latexbuddy.readthedocs.io/"
Repository = "https://gitlab.com/LaTeXBuddy/LaTeXBuddy/"
"Bug tracker" = "https://gitlab.com/LaTeXBuddy/LaTeXBuddy/-/issues"

[project.scripts]
latexbuddy = "latexbuddy.cli:main"
latexbuddy-server = "latexbuddy.flask_app:run_server"
latexbuddy-whitelist = "latexbuddy.whitelist:main"

[tool.hatch]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "coverage[toml]",
    "covdefaults",
    "towncrier",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
cov = [
    "coverage erase",
    "coverage run -m pytest --junitxml=pytest-junit.xml tests",
]
change = "towncrier create {args}"

[[tool.hatch.envs.test.matrix]]
python = ["3.7", "3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.coverage]
detached = true
dependencies = [
    "coverage[toml]",
    "covdefaults",
]

[tool.hatch.envs.coverage.scripts]
combine = "coverage combine {args}"
report = "coverage report"
xml = "coverage xml"
html = "coverage html"

[tool.hatch.envs.docs]
template = "docs"
dependencies = [
    "Sphinx~=6.1.3",
    "myst-parser~=1.0.0",
    "furo==2022.12.7",
    "readthedocs-sphinx-search~=0.2.0",
    "sphinx-autobuild==2021.3.14",
    "sphinx-argparse~=0.4.0",
    "sphinxcontrib-towncrier~=0.3.2a0",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html"
watch = "sphinx-autobuild --watch latexbuddy docs docs/_build/html"

[tool.autopep8]
ignore = ["W503"]

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["latexbuddy"]
parallel = true

[tool.coverage.report]
# TODO: increase this when coverage is good
fail_under = 50

[tool.pytest.ini_options]
addopts = "--tb=short"

[tool.ruff]
line-length = 79
target-version = "py37"

select = [
    "F",  # pyflakes
    "E", "W",  # pycodestyle
    "C90",  # mccabe
    # TODO: complete docs in a separate issue
#    "D1", "D3",  # pydocstyle
    "N",  # pep8-naming
    "S",  # bandit
    "BLE",  # flake8-blind-except
    "FBT",  # flake8-boolean-trap
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "EM",  # flake8-errmsg
    "ICN",  # flake8-import-conventions
    "T20",  # flake8-print
    "Q",  # flake8-quotes
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "ERA",  # eradicate
    "PLC", "PLE", "PLR", "PLW",  # pylint
]

extend-ignore = [
    # TODO: un-ignore this later
    "PLR0913",  # Too many arguments to function call
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.flake8-import-conventions.aliases]
multiprocessing = "mp"

[tool.ruff.flake8-quotes]
inline-quotes = "double"

[tool.towncrier]
package = "latexbuddy"
filename = "CHANGELOG.md"
directory = "changelog.d"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
template = "changelog.d/_template.md.jinja"
title_format = ""
issue_format = "[#{issue}](https://gitlab.com/LaTeXBuddy/LaTeXBuddy/-/issues/{issue})"

  [[tool.towncrier.type]]
  directory = "breaking"
  name = "🔥 BREAKING CHANGES"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "add"
  name = "Added"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "change"
  name = "Changed"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "fix"
  name = "Fixed"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "remove"
  name = "Removed"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecate"
  name = "Deprecated"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "internal"
  name = "Behind-the-scenes"
  showcontent = true
